swagger added for products, product single endpoint created
